objects/ASI_KOR_Sales_Order_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Allocation_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allocation Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Back_Order__c</fullName>
        <formula>ASI_KOR_Order_Qty__c-ASI_CRM_CN_Released_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Back Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Free_Qty_BT__c</fullName>
        <formula>IF (  RecordType.DeveloperName ==&quot;ASI_CRM_CN_SalesOrder_Item&quot; &amp;&amp; ASI_CRM_CN_Promotion_Code__r.ASI_CRM_Buy_X__c &gt; 0, FLOOR(( ASI_KOR_Order_Qty__c/ASI_CRM_CN_Promotion_Code__r.ASI_CRM_Buy_X__c )) *  ASI_CRM_CN_Promotion_Code__r.ASI_CRM_Get_Y__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Free Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Item_Group_Code__c</fullName>
        <formula>IF( CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_CN&quot;),  ASI_CRM_CN_Product_Name__r.ASI_MFM_Item_Group_Code__c, &quot;&quot;)</formula>
        <label>Item Group Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Logistics_Remark__c</fullName>
        <label>Logistics Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>Sales Order Request Items</relationshipLabel>
        <relationshipName>Sales_Order_Request_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Promotion_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion Code</label>
        <referenceTo>ASI_CRM_Promotion_Master__c</referenceTo>
        <relationshipLabel>Sales Order Request Items</relationshipLabel>
        <relationshipName>Sales_Order_Request_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Promotion_Expiration_Date__c</fullName>
        <label>Promotion Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Qty_9L_FRU__c</fullName>
        <label>Qty (9L)(For Roll Up)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Qty_9L__c</fullName>
        <formula>IF( RecordType.DeveloperName = &quot;ASI_CRM_CN_SalesOrder_Item&quot;, IF(ASI_CRM_CN_UOM__c == &quot;BT&quot;, (  ASI_KOR_Order_Qty__c + ASI_CRM_CN_Free_Qty_BT__c ) * ASI_CRM_CN_Product_Name__r.ASI_CRM_CN_Converion9L_C__c, (  ASI_KOR_Order_Qty__c + ASI_CRM_CN_Free_Qty_BT__c ) * ASI_CRM_CN_Product_Name__r.ASI_CRM_CN_Pack_Value__c * ASI_CRM_CN_Product_Name__r.ASI_CRM_CN_Converion9L_C__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qty (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Released_Qty__c</fullName>
        <label>Released Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Remark__c</fullName>
        <label>Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_SOT_EXID__c</fullName>
        <externalId>true</externalId>
        <label>Sales Order Item ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sales_Oder_TOV__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Oder (TOV)</label>
        <referenceTo>ASI_CRM_TOV__c</referenceTo>
        <relationshipLabel>Sales Order Request Items</relationshipLabel>
        <relationshipName>Sales_Order_Request_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Dispatched</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sum_of_Order_Qty_And_Free_Qty__c</fullName>
        <formula>ASI_KOR_Order_Qty__c +  ASI_CRM_CN_Free_Qty_BT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sum_of_QtyNFree_Qty_RollUp__c</fullName>
        <label>Sum of QtyNFree Qty RollUp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Total_Amount_BT_RU__c</fullName>
        <label>Total Amount - BT RollUp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Total_Amount_BT__c</fullName>
        <formula>IF( RecordType.DeveloperName = &quot;ASI_CRM_CN_SalesOrder_Item&quot;, IF( ASI_CRM_CN_UOM__c == &quot;BT&quot;, ASI_KOR_Order_Qty__c *  ASI_CRM_CN_Unit_Price_BT_with_VAT__c, ASI_KOR_Order_Qty__c *  ASI_CRM_CN_Unit_Price_BT_with_VAT__c * ASI_CRM_CN_Product_Name__r.ASI_CRM_CN_Pack_Value__c ), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount - BT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_UOM__c</fullName>
        <formula>IF( RecordType.DeveloperName = &quot;ASI_CRM_CN_SalesOrder_Item&quot;, IF( NOT(ISBLANK(ASI_CRM_UOM_Text__c)), ASI_CRM_UOM_Text__c, IF( NOT(ISBLANK(TEXT( ASI_KOR_Sales_Order_Request__r.ASI_CRM_UOM__c))), IF(ISPICKVAL(ASI_KOR_Sales_Order_Request__r.ASI_CRM_UOM__c, &quot;BT&quot;), &quot;BT&quot;, &quot;CA&quot;), IF( ASI_KOR_Sales_Order_Request__r.ASI_CRM_CN_Customer__r.ASI_CRM_CN_Order_by_BT__c, &quot;BT&quot;, &quot;CA&quot;))), &quot;&quot;)</formula>
        <label>UOM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Unit_Price_BT_with_VAT__c</fullName>
        <label>Unit Price - BT(with-VAT)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Unit_Price_Source__c</fullName>
        <label>Unit Price Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ETL_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ETL Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Effective_Date_To__c</fullName>
        <label>Effective Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_English_Name__c</fullName>
        <formula>ASI_CRM_SG_SKU__r.ASI_HK_CRM_English_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>English Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FOC_Additional__c</fullName>
        <label>FOC (Additional)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FOC_Adjusted_Rate__c</fullName>
        <formula>ASI_CRM_FOC_Additional__c * 12 / ( ASI_CRM_SG_Request_Quantity_Carton__c * ASI_CRM_Packaging_Size__c + ASI_CRM_SG_Request_Quantity_Bottle__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOC Adjusted Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FOC_Adjusted__c</fullName>
        <formula>/*
ASI_CRM_SG_FOC__c  &lt;&gt;  ASI_CRM_FOC_Computed__c
*/
AND (
   NOT(ISBLANK(ASI_CRM_FOC_Additional__c)),
   ASI_CRM_FOC_Additional__c &lt;&gt; 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOC Adjusted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FOC_Computed__c</fullName>
        <label>FOC (Computed)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Initial_Qty_CT__c</fullName>
        <label>Initial Quantity (Carton)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Lot_Number__c</fullName>
        <formula>ASI_CRM_Sales_Order_History_Detail__r.ASI_CRM_Lot_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lot Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Order_Qty_Bottle__c</fullName>
        <formula>IF(ASI_CRM_CN_UOM__c == &quot;CA&quot;, ASI_KOR_Order_Qty__c *  ASI_CRM_CN_Product_Name__r.ASI_CRM_CN_Pack_Value__c, ASI_KOR_Order_Qty__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Qty(Bottle)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Pack_Factor__c</fullName>
        <formula>ASI_CRM_SG_SKU__r.ASI_HK_CRM_Pack_Factor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pack Factor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Packaging_Size__c</fullName>
        <label>Packaging Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_A_G_Code__c</fullName>
        <label>A/G Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Amount__c</fullName>
        <formula>ASI_KOR_Order_Qty__c *  ASI_CRM_SG_Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Available_Quantity__c</fullName>
        <label>Available Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_FOC__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FOC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Request_Quantity_Bottle__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Request Quantity (Bottle)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Request_Quantity_Carton__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Request Quantity (Carton)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Sales Order Request Items</relationshipLabel>
        <relationshipName>ASI_CRM_SG_Sales_Order_Request_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Sub_brand__c</fullName>
        <formula>ASI_CRM_SG_SKU__r.ASI_MFM_Sub_brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Total_Price_PRS_WS__c</fullName>
        <formula>((ASI_CRM_SG_Request_Quantity_Carton__c *  ASI_CRM_Packaging_Size__c ) +  ASI_CRM_SG_Request_Quantity_Bottle__c) *  ASI_CRM_Selling_Price_Per_Bottle_PRS_WS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price (PRS - WS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_UOM__c</fullName>
        <formula>ASI_CRM_SG_SKU__r.ASI_HK_CRM_UOM1__c</formula>
        <label>UOM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU_Code__c</fullName>
        <formula>ASI_CRM_SG_SKU__r.ASI_MFM_SKU_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SO_History_AG_Code__c</fullName>
        <formula>IF(ASI_CRM_Sales_Order_History_Detail__r.ASI_CRM_AG_Code__c== &quot;STK2&quot;, ASI_CRM_Sales_Order_History_Detail__r.ASI_CRM_AG_Code__c, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SO History AG Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sales_Order_History_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order History Detail</label>
        <referenceTo>ASI_HK_CRM_Sales_Order_History_Detail__c</referenceTo>
        <relationshipLabel>Sales Order Request Items</relationshipLabel>
        <relationshipName>Sales_Order_Request_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Selling_Price_Per_Bottle_PRS_WS__c</fullName>
        <label>Selling Price Per Bottle (PRS - WS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Short_Description__c</fullName>
        <formula>ASI_CRM_SG_SKU__r.ASI_CRM_Short_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Stock_Availability__c</fullName>
        <label>Stock Availability</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Request_Quantity_Bottle__c</fullName>
        <formula>( ASI_CRM_SG_Request_Quantity_Carton__c *  ASI_CRM_SG_SKU__r.ASI_HK_CRM_Packaging_Size__c ) +  ASI_CRM_SG_Request_Quantity_Bottle__c +  ASI_CRM_SG_FOC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Request Quantity (Bottle)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_UOM_Text__c</fullName>
        <label>UOM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Base_Selling_Price__c</fullName>
        <label>Base Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Discount_Amount__c</fullName>
        <formula>if(  ISBLANK(ASI_KOR_JDE_Supply_Amount__c ), null,ASI_KOR_Supply_Amount__c - ASI_KOR_JDE_Supply_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Item_Category__c</fullName>
        <formula>TEXT(ASI_KOR_Item_Group_Code__r.ASI_KOR_Product_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Item_Group_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group Code</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Item Groups no longer Active!</errorMessage>
            <filterItems>
                <field>ASI_KOR_Item_Group__c.ASI_KOR_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_KOR_Item_Group__c</referenceTo>
        <relationshipLabel>Sales Order Request Items</relationshipLabel>
        <relationshipName>Sales_Order_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_JDE_Sales_Amount__c</fullName>
        <label>JDE Sales Amount (Include VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_JDE_Supply_Amount__c</fullName>
        <label>JDE Supply Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Nature_Alcohol__c</fullName>
        <label>Nature/Alcohol</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nature</fullName>
                </value>
                <value>
                    <fullName>Alcohol</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_Order_Line_Num__c</fullName>
        <formula>VALUE(ASI_KOR_Order_line_number__c)/1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Line Num</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Order_Qty__c</fullName>
        <label>Order Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Order_line_number__c</fullName>
        <label>Order line number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Packaging_Regional__c</fullName>
        <label>Packaging/Regional</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Packaging</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_Product_Usage__c</fullName>
        <label>Product Usage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Export</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>On Trade</fullName>
                </value>
                <value>
                    <fullName>Discount Store</fullName>
                </value>
                <value>
                    <fullName>Off Trade</fullName>
                </value>
                <value>
                    <fullName>Army Tax Paid</fullName>
                </value>
                <value>
                    <fullName>Domestic DF</fullName>
                </value>
                <value>
                    <fullName>Army Tax Free</fullName>
                </value>
                <value>
                    <fullName>E-mart</fullName>
                </value>
                <value>
                    <fullName>Giftset</fullName>
                </value>
                <value>
                    <fullName>Home Plus</fullName>
                </value>
                <value>
                    <fullName>Promotional Items</fullName>
                </value>
                <value>
                    <fullName>POS Items</fullName>
                </value>
                <value>
                    <fullName>Normal product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_SKU_Code__c</fullName>
        <formula>ASI_KOR_SKU_Name__r.ASI_KOR_SKU_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SKU_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_KOR_SKU_Product__c.ASI_KOR_Item_Group__c</field>
                <operation>equals</operation>
                <valueField>$Source.ASI_KOR_Item_Group_Code__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_KOR_SKU_Product__c</referenceTo>
        <relationshipLabel>Sales Order Request Items</relationshipLabel>
        <relationshipName>Sales_Order_Request_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SOT_UOM__c</fullName>
        <label>Unit Of Measure (UOM)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Bottle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_FILTER_SUB_BRAND__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for filtering input box when adding new product</description>
        <label>SYS_FILTER_SUB_BRAND</label>
        <referenceTo>ASI_KOR_Sub_Brand__c</referenceTo>
        <relationshipLabel>SYS Sales Order Request Items</relationshipLabel>
        <relationshipName>ASI_KOR_SYS_FilterSORequestItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_INFO_EDI_Document_NO__c</fullName>
        <label>SYS_INFO_EDI_Document_NO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_INFO_HEADER_EDI_NO__c</fullName>
        <formula>ASI_KOR_Sales_Order_Request__r.ASI_KOR_SYS_INFO_EDI_Document_No__c</formula>
        <label>SYS_INFO_HEADER_EDI_NO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_INFO_Header_OrderStatus__c</fullName>
        <formula>TEXT(ASI_KOR_Sales_Order_Request__r.ASI_KOR_Order_Status__c)</formula>
        <label>SYS_INFO_Header_OrderStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_INFO_Header_SFID__c</fullName>
        <formula>ASI_KOR_Sales_Order_Request__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SYS_INFO_Header_SFID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_INFO_ITEM_GROUP_CODE__c</fullName>
        <formula>ASI_KOR_Item_Group_Code__r.ASI_KOR_Item_Group_Code__c</formula>
        <label>SYS_INFO_ITEM_GROUP_CODE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_INFO_SKU_CODE__c</fullName>
        <formula>ASI_KOR_SKU_Name__r.ASI_KOR_JDE_Item_Number__c</formula>
        <label>SYS_INFO_SKU_CODE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_INFO_SORD_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SYS_INFO_SORD_ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_KOR_Sales_Amount__c</fullName>
        <formula>ASI_KOR_Supply_Amount__c * 1.1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Invlude 10% VAT</inlineHelpText>
        <label>Sales Amount (Include VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Sales_Order_Request__c</fullName>
        <label>Sales Order Request</label>
        <referenceTo>ASI_KOR_Sales_Order_Request__c</referenceTo>
        <relationshipName>ASI_KOR_Sales_Order_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Supply_Amount_OLD__c</fullName>
        <label>Supply Amount OLD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Supply_Amount__c</fullName>
        <formula>ASI_KOR_Base_Selling_Price__c * ASI_KOR_Order_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supply Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Sales Order Request Item</label>
    <nameField>
        <displayFormat>SOT-{00000000}</displayFormat>
        <label>Sales Order Request Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Request Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_SalesOrder_Item</fullName>
        <active>true</active>
        <label>CN SalesOrder Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_CA</fullName>
        <active>true</active>
        <description>SG Re-exporter SO Cambodia Duty Free</description>
        <label>ASI CRM SG CA</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_IN</fullName>
        <active>true</active>
        <label>ASI CRM SG IN</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_LA</fullName>
        <active>true</active>
        <description>SG Re-exporter SO Laos Duty Free</description>
        <label>ASI CRM SG LA</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_MM</fullName>
        <active>true</active>
        <description>SG Re-exporter SO Myanmar Duty Free</description>
        <label>ASI CRM SG MM</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_MY</fullName>
        <active>true</active>
        <description>SG Re-exporter SO Malaysia Duty Free</description>
        <label>ASI CRM SG MY</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_PH</fullName>
        <active>true</active>
        <description>SG Re-exporter SO Philippines Interco</description>
        <label>ASI CRM SG PH</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_TBCN</fullName>
        <active>true</active>
        <label>ASI CRM SG TBCN</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_VI</fullName>
        <active>true</active>
        <description>SG Re-exporter SO Vietnam Interco</description>
        <label>ASI CRM SG VI</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_VIDF</fullName>
        <active>true</active>
        <description>SG Re-exporter SO Vietnam Duty Free</description>
        <label>ASI CRM SG VIDF</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Wholesaler</fullName>
        <active>true</active>
        <label>ASI CRM SG Wholesaler</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_CN_Qty_Checking</fullName>
        <active>true</active>
        <errorConditionFormula>IF ( RecordType.DeveloperName == &apos;ASI_CRM_CN_SalesOrder_Item&apos; &amp;&amp; ASI_KOR_Order_Qty__c &gt;  ASI_CRM_CN_Promotion_Code__r.ASI_CRM_Buy_X__c  &amp;&amp;  MOD(ASI_KOR_Order_Qty__c, ASI_CRM_CN_Promotion_Code__r.ASI_CRM_Buy_X__c) != 0, True, False)</errorConditionFormula>
        <errorDisplayField>ASI_KOR_Order_Qty__c</errorDisplayField>
        <errorMessage>For Buy X Get Y Promotion type, order quantity must be less than X or multiple of X</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_SG_QtyValidation</fullName>
        <active>true</active>
        <errorConditionFormula>(ASI_CRM_SG_Available_Quantity__c &lt;  ASI_KOR_Order_Qty__c &amp;&amp;  CONTAINS(RecordType.DeveloperName, &apos;ASI_CRM_SG&apos;))</errorConditionFormula>
        <errorDisplayField>ASI_KOR_Order_Qty__c</errorDisplayField>
        <errorMessage>Order Quantity cannot be greater than Available Quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_SG_TBCN_PreventNegativeQty</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
  RecordType.DeveloperName = &apos;ASI_CRM_SG_TBCN&apos;, 
  ASI_CRM_SG_Request_Quantity_Bottle__c &lt; 0 
)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_SG_Request_Quantity_Bottle__c</errorDisplayField>
        <errorMessage>Negative quantity is not allowed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_SG_WS_PreventNegativeQty</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
  RecordType.DeveloperName = &apos;ASI_CRM_SG_Wholesaler&apos;,
  OR (
     (ASI_CRM_SG_FOC__c + ASI_CRM_FOC_Additional__c) &lt; 0,
     ASI_CRM_SG_Request_Quantity_Carton__c &lt; 0,
     ASI_CRM_SG_Request_Quantity_Bottle__c &lt; 0
  )
)</errorConditionFormula>
        <errorMessage>Negative quantity is not allowed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disallow_SOR_Item_Edit</fullName>
        <active>false</active>
        <description>Disallow user to edit SOR Item if the parent SOR status is not New</description>
        <errorConditionFormula>TEXT(ASI_KOR_Sales_Order_Request__r.ASI_KOR_Order_Status__c ) &lt;&gt; &quot;New&quot; &amp;&amp; $Profile.Name &lt;&gt; &quot;ASI KOR System Administrator&quot; &amp;&amp; $Profile.Name &lt;&gt; &quot;System Administrator&quot; &amp;&amp; $Profile.Name &lt;&gt; &quot;System Administrator GDT&quot;</errorConditionFormula>
        <errorMessage>The Sales Order Request Item cannot be edited because the Sales Order Request has already been submitted.</errorMessage>
    </validationRules>
</CustomObject>